# hexapod

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  imgui.ini
.cache/clangd/index/: HexapodApp.cpp.6973A9B20EDABE42.idx  HexapodBody.cpp.DD5F1887D915C8B2.idx  Leg.cpp.E89782903B9D82EB.idx  Leg.h.3B29F22D82E0CEB7.idx  TripodGait.cpp.751C5CA4B0A40408.idx  TripodGait.h.AFA7483158D1A3BB.idx
cad_files/: Bracket-BracketOuter_Bracket.3mf  Bracket-Bracket_ConnectorBracket_Connector001.3mf  Bracket-Bracket_ConnectorPocket003008.3mf  Bracket-m4m41.3mf  Bracket.20260520-164717.FCBak  Bracket.FCStd  Coxa-Coxa_Body.3mf  Coxa-Coxa_Vertical_Adapter.3mf  Coxa.20260519-145028.FCBak  Coxa.FCStd  Leg_Assembly.20260520-164718.FCBak  Leg_Assembly.FCStd  Leg_Test_Mount-Leg_Test_Mount_Body.3mf  Leg_Test_Mount.20260520-173141.FCBak  Leg_Test_Mount.FCStd  MR84_Bearing.FCStd  Tibia-Tibia_Body.3mf  Tibia.20260518-140443.FCBak  Tibia.FCStd  Wire_Grouper-Wire_Grouper_Body.3mf  Wire_Grouper.20260520-092804.FCBak  Wire_Grouper.FCStd
cad_files/dependencies/bearings/: Bracket_Assembly.20260512-181005.FCBak  Bracket_Assembly.FCStd  MR84_Bearing.20260512-181005.FCBak  MR84_Bearing.FCStd  NSK_MR84.stp
cad_files/dependencies/sg90_servo/: SG90-2-arms-horn.fcstd  SG90-4-arms-horn.20260514-161007.FCBak  SG90-4-arms-horn.fcstd  Servo sg90.20260512-181005.FCBak  (+1 more)
src/: HexapodApp.cpp  HexapodBody.cpp  HexapodBody.h  Leg.cpp  Leg.h  TripodGait.cpp  TripodGait.h
src/esp32/: ServoController.cpp  ServoController.h
src/math/: Vec3.h
